--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <img class="img-thumbnail" alt="" src="me.png" style="height: 200px;"/>
       </div>
       <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-6 col-sm-offset-3 text-center">
+          <hr/>
           <h4>Marc Belmont</h4>
           You can find more about me on <a href="https://github.com/marcbelmont">Github</a>, <a href="https://www.linkedin.com/pub/dir/Marc/Belmont">LinkedIn</a> and <a href="https://twitter.com/marcbelmont">Twitter</a>.
+          <hr/>
         </div>
       </div>
     </div>
